more mobs
Scytodes
Tarantula
Tarantula baby
Zombie Ant
Zombie Ant Soldier
Money Spider