@@ -1,25 +1,50 @@
 package erebus.entity;
 
+import javax.annotation.Nullable;
+
+import erebus.ModItems;
+import erebus.core.handler.configs.ConfigHandler;
+import erebus.entity.ai.EntityAIErebusAttackMelee;
+import erebus.items.ItemErebusFood.EnumFoodType;
 import net.minecraft.block.Block;
 import net.minecraft.entity.Entity;
-import net.minecraft.entity.EntityLiving;
+import net.minecraft.entity.EntityLivingBase;
 import net.minecraft.entity.EnumCreatureAttribute;
 import net.minecraft.entity.IEntityLivingData;
 import net.minecraft.entity.SharedMonsterAttributes;
+import net.minecraft.entity.ai.EntityAIHurtByTarget;
+import net.minecraft.entity.ai.EntityAILeapAtTarget;
+import net.minecraft.entity.ai.EntityAILookIdle;
+import net.minecraft.entity.ai.EntityAINearestAttackableTarget;
+import net.minecraft.entity.ai.EntityAISwimming;
+import net.minecraft.entity.ai.EntityAIWanderAvoidWater;
+import net.minecraft.entity.ai.EntityAIWatchClosest;
 import net.minecraft.entity.monster.EntityMob;
 import net.minecraft.entity.monster.EntitySpider;
+import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.init.Items;
+import net.minecraft.init.MobEffects;
+import net.minecraft.init.SoundEvents;
 import net.minecraft.item.ItemStack;
 import net.minecraft.nbt.NBTTagCompound;
+import net.minecraft.network.datasync.DataParameter;
+import net.minecraft.network.datasync.DataSerializers;
+import net.minecraft.network.datasync.EntityDataManager;
+import net.minecraft.pathfinding.PathNavigate;
+import net.minecraft.pathfinding.PathNavigateClimber;
 import net.minecraft.potion.Potion;
 import net.minecraft.potion.PotionEffect;
-import net.minecraft.util.MathHelper;
+import net.minecraft.util.DamageSource;
+import net.minecraft.util.SoundEvent;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.world.DifficultyInstance;
 import net.minecraft.world.EnumDifficulty;
 import net.minecraft.world.World;
-import erebus.ModItems;
-import erebus.core.handler.configs.ConfigHandler;
 
 public class EntityTarantula extends EntityMob {
+
+	private static final DataParameter<Integer> SKIN_TYPE = EntityDataManager.<Integer>createKey(EntityTarantula.class, DataSerializers.VARINT);
+	private static final DataParameter<Byte> CLIMBING = EntityDataManager.<Byte>createKey(EntityTarantula.class, DataSerializers.BYTE);
 
 	public EntityTarantula(World world) {
 		super(world);
@@ -29,16 +54,36 @@ public class EntityTarantula extends EntityMob {
 	@Override
 	protected void entityInit() {
 		super.entityInit();
-		dataWatcher.addObject(16, new Byte((byte) 0));
-		dataWatcher.addObject(30, new Integer(rand.nextInt(2)));
+		dataManager.register(SKIN_TYPE, rand.nextInt(3));
+		dataManager.register(CLIMBING, Byte.valueOf((byte)0));
 	}
+
+	@Override
+    protected void initEntityAI() {
+        tasks.addTask(0, new EntityAISwimming(this));
+        tasks.addTask(1, new EntityAILeapAtTarget(this, 0.4F));
+        tasks.addTask(2, new EntityAIErebusAttackMelee(this, 0.6D, true));
+        tasks.addTask(3, new EntityAIWanderAvoidWater(this, 0.4D));
+        tasks.addTask(4, new EntityAIWatchClosest(this, EntityPlayer.class, 8.0F));
+        tasks.addTask(5, new EntityAILookIdle(this));
+        targetTasks.addTask(0, new EntityAIHurtByTarget(this, false, new Class[0]));
+		targetTasks.addTask(1, new EntityAINearestAttackableTarget(this, EntityPlayer.class, true));
+    }
 
 	@Override
 	protected void applyEntityAttributes() {
 		super.applyEntityAttributes();
-		getEntityAttribute(SharedMonsterAttributes.maxHealth).setBaseValue(ConfigHandler.INSTANCE.mobHealthMultipier < 2 ? 30D : 30D * ConfigHandler.INSTANCE.mobHealthMultipier);
-		getEntityAttribute(SharedMonsterAttributes.attackDamage).setBaseValue(ConfigHandler.INSTANCE.mobAttackDamageMultiplier < 2 ? 5D : 5D * ConfigHandler.INSTANCE.mobAttackDamageMultiplier);
-		getEntityAttribute(SharedMonsterAttributes.movementSpeed).setBaseValue(0.7D);
+		getEntityAttribute(SharedMonsterAttributes.MAX_HEALTH).setBaseValue(ConfigHandler.INSTANCE.mobHealthMultipier < 2 ? 30D : 30D * ConfigHandler.INSTANCE.mobHealthMultipier);
+		getEntityAttribute(SharedMonsterAttributes.ATTACK_DAMAGE).setBaseValue(ConfigHandler.INSTANCE.mobAttackDamageMultiplier < 2 ? 5D : 5D * ConfigHandler.INSTANCE.mobAttackDamageMultiplier);
+		getEntityAttribute(SharedMonsterAttributes.MOVEMENT_SPEED).setBaseValue(0.6D);
+	}
+
+	@Override
+	public boolean getCanSpawnHere() {
+		float light = getBrightness();
+		if (light >= 0F)
+			return isNotColliding();
+		return super.getCanSpawnHere();
 	}
 
 	@Override
@@ -52,98 +97,85 @@ public class EntityTarantula extends EntityMob {
 	}
 
 	@Override
-	public boolean isOnLadder() {
-		return isBesideClimbableBlock();
-	}
-
-	@Override
-	public void setInWeb() {
-	}
-
-	@Override
 	public EnumCreatureAttribute getCreatureAttribute() {
 		return EnumCreatureAttribute.ARTHROPOD;
 	}
 
 	@Override
-	public boolean isPotionApplicable(PotionEffect potionEffect) {
-		return potionEffect.getPotionID() == Potion.poison.id ? false : super.isPotionApplicable(potionEffect);
-	}
-
-	public boolean isBesideClimbableBlock() {
-		return (dataWatcher.getWatchableObjectByte(16) & 1) != 0;
-	}
-
-	public void setBesideClimbableBlock(boolean besideBlock) {
-		byte b0 = dataWatcher.getWatchableObjectByte(16);
-
-		if (besideBlock)
-			b0 = (byte) (b0 | 1);
-		else
-			b0 &= -2;
-
-		dataWatcher.updateObject(16, Byte.valueOf(b0));
+	protected SoundEvent getAmbientSound() {
+		return SoundEvents.ENTITY_SPIDER_AMBIENT;
 	}
 
 	@Override
-	protected String getLivingSound() {
-		return "mob.spider.say";
+	protected SoundEvent getHurtSound(DamageSource source) {
+		return SoundEvents.ENTITY_SPIDER_HURT;
 	}
 
 	@Override
-	protected String getHurtSound() {
-		return "mob.spider.say";
+	protected SoundEvent getDeathSound() {
+		return SoundEvents.ENTITY_SPIDER_DEATH;
 	}
 
 	@Override
-	protected String getDeathSound() {
-		return "mob.spider.death";
+	protected void playStepSound(BlockPos pos, Block block) {
+		this.playSound(SoundEvents.ENTITY_SPIDER_STEP, 0.15F, 1.0F);
 	}
 
 	@Override
-	protected void func_145780_a(int x, int y, int z, Block block) {
-		playSound("mob.spider.step", 0.15F, 1.0F);
-	}
+    protected PathNavigate createNavigator(World worldIn) {
+        return new PathNavigateClimber(this, worldIn);
+    }
+
+	@Override
+    public boolean isOnLadder() {
+        return isBesideClimbableBlock();
+    }
+
+	@Override
+    public void setInWeb() {
+    }
+
+	@Override
+    public boolean isPotionApplicable(PotionEffect potioneffectIn) {
+        return potioneffectIn.getPotion() == MobEffects.POISON ? false : super.isPotionApplicable(potioneffectIn);
+    }
 
 	@Override
 	public void onUpdate() {
 		super.onUpdate();
-		if (!worldObj.isRemote)
-			setBesideClimbableBlock(isCollidedHorizontally);
+		if (!this.world.isRemote)
+			setBesideClimbableBlock(this.isCollidedHorizontally);
 	}
 
-	@Override
-	protected void attackEntity(Entity entity, float distance) {
-		if (distance < 2.0F) {
-			super.attackEntity(entity, distance);
-			attackEntityAsMob(entity);
-		}
-		if (distance > 2.0F && distance < 6.0F && rand.nextInt(10) == 0)
-			if (onGround) {
-				double d0 = entity.posX - posX;
-				double d1 = entity.posZ - posZ;
-				float f2 = MathHelper.sqrt_double(d0 * d0 + d1 * d1);
-				motionX = d0 / f2 * 0.5D * 0.800000011920929D + motionX * 0.20000000298023224D;
-				motionZ = d1 / f2 * 0.5D * 0.800000011920929D + motionZ * 0.20000000298023224D;
-				motionY = 0.4000000059604645D;
-			}
-	}
+    public boolean isBesideClimbableBlock() {
+        return (((Byte)dataManager.get(CLIMBING)).byteValue() & 1) != 0;
+    }
+
+    public void setBesideClimbableBlock(boolean climbing){
+        byte b0 = ((Byte)this.dataManager.get(CLIMBING)).byteValue();
+        if (climbing)
+            b0 = (byte)(b0 | 1);
+        else
+            b0 = (byte)(b0 & -2);
+        dataManager.set(CLIMBING, Byte.valueOf(b0));
+    }
 
 	@Override
 	public boolean attackEntityAsMob(Entity entity) {
-		if (super.attackEntityAsMob(entity)) {
+		if (canEntityBeSeen(entity)) {
+			if (super.attackEntityAsMob(entity)) {
+				if (entity instanceof EntityLivingBase) {
+					byte duration = 0;
 
-			if (entity instanceof EntityLiving) {
-				byte duration = 0;
+					if (getEntityWorld().getDifficulty().ordinal() > EnumDifficulty.EASY.ordinal())
+						if (getEntityWorld().getDifficulty() == EnumDifficulty.NORMAL)
+							duration = 5;
+						else if (getEntityWorld().getDifficulty() == EnumDifficulty.HARD)
+							duration = 10;
 
-				if (worldObj.difficultySetting.ordinal() > EnumDifficulty.EASY.ordinal() && rand.nextInt(19) == 0)
-					if (worldObj.difficultySetting == EnumDifficulty.NORMAL)
-						duration = 5;
-					else if (worldObj.difficultySetting == EnumDifficulty.HARD)
-						duration = 10;
-
-				if (duration > 0)
-					((EntityLiving) entity).addPotionEffect(new PotionEffect(Potion.poison.id, duration * 20, 0));
+					if (duration > 0)
+						((EntityLivingBase) entity).addPotionEffect(new PotionEffect(MobEffects.POISON, duration * 20, 0));
+				}
 			}
 			return true;
 		} else
@@ -152,56 +184,45 @@ public class EntityTarantula extends EntityMob {
 
 	@Override
 	protected void dropFewItems(boolean recentlyHit, int looting) {
-		int chanceFiftyFifty = rand.nextInt(1) + 1;
-		int chance20x60x20 = rand.nextInt(4);
-		int legDrop = 0;
-		switch (chance20x60x20) {
-			case 0:
-				legDrop = 1;
-				break;
-			case 1:
-			case 2:
-			case 3:
-				legDrop = 2;
-				break;
-			case 4:
-				legDrop = 3;
-				break;
-		}
 		if (isBurning())
-			entityDropItem(new ItemStack(ModItems.food, legDrop + looting, 5), 0.0F);
+			entityDropItem(new ItemStack(ModItems.EREBUS_FOOD, 1 + rand.nextInt(2 + looting), EnumFoodType.TARANTULA_LEG_COOKED.ordinal()), 0.0F);
 		else
-			entityDropItem(new ItemStack(ModItems.food, legDrop + looting, 4), 0.0F);
-		dropItem(Items.spider_eye, chanceFiftyFifty + looting);
+			entityDropItem(new ItemStack(ModItems.EREBUS_FOOD, 1 + rand.nextInt(2 + looting), EnumFoodType.TARANTULA_LEG_RAW.ordinal()), 0.0F);
+		dropItem(Items.SPIDER_EYE, rand.nextInt(2) + looting);
 	}
 
 	@Override
-	public IEntityLivingData onSpawnWithEgg(IEntityLivingData entityLivingData) {
-		Object entityLivingData1 = super.onSpawnWithEgg(entityLivingData);
+    @Nullable
+    public IEntityLivingData onInitialSpawn(DifficultyInstance difficulty, @Nullable IEntityLivingData livingdata) {
+        livingdata = super.onInitialSpawn(difficulty, livingdata);
 
-		if (worldObj.rand.nextInt(100) == 0) {
-			EntityMoneySpider entityspidermoney = new EntityMoneySpider(worldObj);
-			entityspidermoney.setLocationAndAngles(posX, posY, posZ, rotationYaw, 0.0F);
-			entityspidermoney.onSpawnWithEgg((IEntityLivingData) null);
-			worldObj.spawnEntityInWorld(entityspidermoney);
-			entityspidermoney.mountEntity(this);
+		if (getEntityWorld().rand.nextInt(100) == 0) {
+			EntityMoneySpider moneyspider = new EntityMoneySpider(getEntityWorld());
+			moneyspider.setLocationAndAngles(posX, posY, posZ, rotationYaw, 0.0F);
+			moneyspider.onInitialSpawn(difficulty, (IEntityLivingData) null);
+			getEntityWorld().spawnEntity(moneyspider);
+			moneyspider.startRiding(this);
 		}
-		if (entityLivingData1 == null) {
-			entityLivingData1 = new EntitySpider.GroupData();
-			if (worldObj.difficultySetting == EnumDifficulty.HARD && worldObj.rand.nextFloat() < 0.1F * worldObj.func_147462_b(posX, posY, posZ))
-				((EntitySpider.GroupData) entityLivingData1).func_111104_a(worldObj.rand);
+		if (livingdata == null) {
+			livingdata = new EntitySpider.GroupData();
+            if (this.world.getDifficulty() == EnumDifficulty.HARD && this.world.rand.nextFloat() < 0.1F * difficulty.getClampedAdditionalDifficulty())
+                ((EntitySpider.GroupData)livingdata).setRandomEffect(this.world.rand);
 
-			if (entityLivingData1 instanceof EntitySpider.GroupData) {
-				int i = ((EntitySpider.GroupData) entityLivingData1).field_111105_a;
-				if (i > 0 && Potion.potionTypes[i] != null)
-					addPotionEffect(new PotionEffect(i, Integer.MAX_VALUE));
-			}
+            if (livingdata instanceof EntitySpider.GroupData) {
+                Potion potion = ((EntitySpider.GroupData)livingdata).effect;
+                if (potion != null)
+                    this.addPotionEffect(new PotionEffect(potion, Integer.MAX_VALUE));
+            }
 		}
-		return (IEntityLivingData) entityLivingData1;
+		return livingdata;
 	}
 
 	public void setSkin(int skinType) {
-		dataWatcher.updateObject(30, new Integer(skinType));
+		dataManager.set(SKIN_TYPE, skinType);
+	}
+
+	public int getSkin() {
+		return dataManager.get(SKIN_TYPE);
 	}
 
 	@Override
@@ -216,10 +237,6 @@ public class EntityTarantula extends EntityMob {
 		if (nbt.hasKey("skin"))
 			setSkin(nbt.getInteger("skin"));
 		else
-			setSkin(rand.nextInt(2));
-	}
-
-	public int getSkin() {
-		return dataWatcher.getWatchableObjectInt(30);
+			setSkin(rand.nextInt(3));
 	}
 }
